--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -5,4 +5,7 @@
     <string name="navigation_drawer_close">Close navigation drawer</string>
 
     <string name="action_settings">Settings</string>
+
+    <string name="facebook_application_id">1783058972011642</string>
+    <string name="fb_login_protocol_scheme">fb1783058972011642</string>
 </resources>
