--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -4,8 +4,16 @@
     <string name="navigation_drawer_open">Open navigation drawer</string>
     <string name="navigation_drawer_close">Close navigation drawer</string>
 
+    <string name="nav_news_title">News</string>
+    <string name="nav_calendar_title">Calendar</string>
+    <string name="nav_achievements_title">Achievements</string>
+    <string name="nav_hbs_title">HBS</string>
+    <string name="nav_settings_title">Settings</string>
+    <string name="nav_about_title">About</string>
+    <string name="nav_logoff_title">Logoff</string>
+
     <string name="action_settings">Settings</string>
 
-    <string name="facebook_application_id">1783058972011642</string>
-    <string name="fb_login_protocol_scheme">fb1783058972011642</string>
+    <string name="facebook_application_id" translatable="false">1783058972011642</string>
+    <string name="fb_login_protocol_scheme" translatable="false">fb1783058972011642</string>
 </resources>
